# flappy-pebble

./: .gitignore  Cargo.toml  LICENSE  README.md  build-wasm.sh
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: consts.ron  index.html
bevy-flappy-pebble-macro/: Cargo.toml
bevy-flappy-pebble-macro/src/: lib.rs
bevy-flappy-pebble-macro/tests/: test.rs
src/: consts.rs  game_size.rs  gamepad_util.rs  gamescore.rs  gamesize.rs  gamestate.rs  main.rs  moai.rs  pebble.rs  touch_util.rs  ui.rs
src/screen_entity/: moai.rs  mod.rs  pebble.rs
src/state/: gamescore.rs  gamestate.rs  mod.rs
src/ui/: buttons.rs  fullscreen.rs  game_over_dialog.rs  main_menu.rs  mod.rs  pause_menu.rs  scoreboard.rs
