[package]
name = "bevy-flappy-pebble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.22.1"
bevy_easings = "0.12.2"
itertools = "0.12.0"
rand = "0.8.5"

[features]
egui = [] # feature has no explicit dependencies
