[package]
name = "bevy-flappy-pebble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy = { version = "0.12.1"}
bevy-inspector-egui = "0.22.1"

[features]
egui = [] # feature has no explicit dependencies

[profile.release]
opt-level="s"
lto = true
codegen-units = 1