[package]
name = "bevy-flappy-pebble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy = { version = "0.12.1"}
bevy-inspector-egui = "0.22.1"
bevy-flappy-pebble-macro = { path = "bevy-flappy-pebble-macro" }


[features]
egui = [] # feature has no explicit dependencies

[profile.release]
opt-level="s"
lto = true
codegen-units = 1

[workspace]
members = [
    "bevy-flappy-pebble-macro"
]