[package]
name = "bevy-flappy-pebble-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version =  "2.0.46", features = ["extra-traits"] }
quote = "1.0.35"
indoc = { version = "2.0.4", features = [] }
trybuild = "1.0.87"
bevy = { version = "0.12.1"}
